# Xiaosi-Distributed-Artificial-Intelligence-Platform

./: .gitattributes  GEN 4.js  Inno Setup Compiler 下载网址.txt  LICENSE  README.md  Resource Hacker 下载网站.txt  activation.json  requirements 服务管理.txt  requirements 视觉模块.txt  requirements.txt  test.html  内网通服.py  外网通服.py  小思分布式人工智能网络模块.py  小思分布式视觉管理模块.py
Apple/Apple-Mobile-Drivers-Installer-main/Apple-Mobile-Drivers-Installer-main/: AppleDrivInstaller.ps1
ComFigGUI/: .gitignore  README.md  app.js  exec-workflow.bat  index.html  nodes.js  run-workflow.py  server.py  start-server.bat  styles.css
Inno Setup Compiler/: Inno Setup Compiler 下载网址.txt
SecureCRT汉化版/: SecureCRT.Lic
Xiaosi  GEN 架构/1.0/: Xiao Si AI Kernel.py
Xiaosi  GEN 架构/2.0/: Xiao_Si_AI_KERNEL.2.0_有颜色观赏版本.py  Xiao_Si_AI_KERNEL_2.0_无颜色观赏版本.py
Xiaosi  GEN 架构/3.0/: 小思分布式人工智能 ™ 10.py
xiaomi-miloco-main/: .semgrepignore  LICENSE.md  README.md  README.zh.md  user_guide.md  user_guide_zh.md
xiaomi-miloco-main/.ci/: Dockerfile.pr-review  dependency-guard.mjs  opengrep-rules.yml  pr-review-gate.sh  run-opengrep.sh
xiaomi-miloco-main/.github/: labeler.yml
xiaomi-miloco-main/backend/: pyproject.toml
xiaomi-miloco-main/cli/: README.md  pyproject.toml
xiaomi-miloco-main/cli/src/miloco_cli/: catalog.py  client.py  config.py  home_info.py  main.py  output.py  whitelist.json
xiaomi-miloco-main/cli/src/miloco_cli/commands/: account.py  admin.py  config.py  dashboard.py  debug.py  device.py  doctor.py  home_profile.py  identity.py  monitor.py  notify.py  perceive.py  person.py  rule.py  scene.py  scope.py  service.py  task.py  time_compute.py
xiaomi-miloco-main/cli/tests/: test_catalog.py  test_client.py  test_commands.py  test_config.py  test_cross_end_alignment.py  test_doctor.py  test_home_info.py  test_lookup_iid_by_key.py  test_lru.py  test_output.py  test_record_cli.py  test_task_commands.py  test_time_compute.py  test_version.py
xiaomi-miloco-main/scripts/: build.sh  install-guide.md  install.py  manifest.json  openclaw_config_tool.py  register-skill-tools.sh  sync-to-remote.sh  version_normalize.py
xiaomi-miloco-main/web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
图像架构/: 视频录制系统.py  视频录制系统2.py
小思人工智能应用及漏洞管理/: README.md  RELEASE_NOTES.md  requirements.txt  小思人工智能应用及漏洞管理.py
小思超级PXE/: cli.py  quick_start.py  requirements.txt
小思超级PXE/gui/: main_window.py
小思超级PXE/pxe/: __init__.py
小思超级PXE/servers/: http_server.py
小思超级PXE/utils/: __init__.py
小思超级服务/小思超级NAS/: .gitignore  README.md  多语言版本指南.md
小思超级服务/小思超级PXE/: README.md  TROUBLESHOOTING.md  config.example.json  config.json  diagnose.py  diagnose_advanced.py  gui.py  pxe_server.py  快速开始.md
小思超级服务/小思超级多版本NAS/: .gitignore  README.md  config.json  nas_server.py  push_to_gitcode.bat  start.sh  多语言版本指南.md
小思超级服务/小思超级多版本NAS 1/: GITCODE_PUSH_GUIDE.md  LICENSE  go.mod  push_to_gitcode.sh  start.bat
小思超级服务/小思超级多版本NAS 2/: LICENSE  README.md  start.bat  start.sh  start_all.bat  start_all.sh  start_go.bat  start_go.sh  start_nodejs.bat  start_nodejs.sh  start_python.bat  start_python.sh
小思超级服务/小思超级多版本NAS 2/cpp/: .gitignore  CMakeLists.txt  README.md  build.bat  download_deps.bat  download_deps.sh  main.cpp  start.bat
小思超级服务/小思超级多版本NAS 2/rust/: Cargo.toml  start.bat  start.sh
小思超级服务/小思超级多版本NAS 2/rust/src/: api.rs  config.rs  i18n.rs  main.rs  push.rs  smb.rs  storage.rs  user.rs
小思超级服务/小思超级多版本NAS/08_rust_version/config/: .env  Cargo.toml
开发工具/Resource Hacker/: Resource Hacker 下载网站.txt
(+944 files in other folders)
