[project]
name = "miloco-cli"
dynamic = ["version"]
description = "Miloco CLI — OpenClaw 与 Miloco 后端的调用接口"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Miloco team", email = "xiaomi-miloco@xiaomi.com" }]
dependencies = [
  "click>=8.4.1",
  "httpx>=0.28.1",
  "supervisor>=4.3.0",
]

[project.scripts]
miloco-cli = "miloco_cli.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# 版本号从 git tag 派生（发布时 build.sh 经 SETUPTOOLS_SCM_PRETEND_VERSION 注入）；
# fallback-version 让无 tag 的克隆仍能 uv sync。root 指向仓库根（git 元数据所在）。
[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/miloco_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
