[package]
name = "nas_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "9"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"
walkdir = "2"
zip = "0.6"
tar = "0.4"
flate2 = "1"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }